--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
 }
 
+/* nav bar and footer */
 .siteNav {
     display: inline-block;
     background-color: black;
@@ -18,8 +19,35 @@ body {
     padding-bottom: 10px;
 }
 
+.footerNav {
+    display: inline-block;
+    background-color: black;
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+.creatorName {
+    color:white;
+    list-style-type: none;
+}
+
 .logo {
     margin-left: 12px;
+}
+
+.socialMedia {
+   width: 30px;
+   height: 30px;
+   margin-right: 15px;
+  
+}
+
+.mediaRight {
+    display: flex;
+    float: right;
+    margin-top: 3rem;
+    margin-right: 30px;
+    
 }
 
 .navlinks {
@@ -37,6 +65,14 @@ body {
     
 }
 
+.navlinks3 {
+    display: flex;
+    gap: 2rem;
+    float: left;
+    margin-top: 3rem;
+    margin-right: 30px;
+}
+
 .navlinks li a {
     color: white;
     text-decoration: none;
@@ -50,6 +86,12 @@ body {
     display: flex;
     margin-right: 15px;
     
+}
+
+.navlinks3 li a {
+    color: white;
+    text-decoration: none;
+    display: flex;
 }
 
 .navlinks li a:hover {
