--- a/static/style.css
+++ b/static/style.css
@@ -105,6 +105,61 @@ body {
 }
 
 /* index css */
-.homeContent {
-    margin: 80px 100px;
+.content {
+    margin-bottom: 80px;
+    margin-left:80px ;
 }
+
+.pageHeader {
+    margin-top: 80px;
+    margin-left: 80px;
+    font-size: 15px;
+}
+
+
+/* events css */
+.eventCategory {
+    display: flex;
+    justify-content: center;
+}
+.events {
+    position: relative;
+}
+
+.eventCards {
+    margin-top: 1rem;
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.cardContainer {
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 5px 5px 14px #5271FF;
+    width: 12rem;
+    height: 15rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
+    margin-bottom: 20px;
+  }
+  
+  .cardContainer img {
+    height: 9rem;
+    width: 12rem;
+    display: flex;
+  }
+  
+  .cardContainer h3 {
+    margin: 0;
+  }
+  
+  .eventLink {
+    text-decoration: none;
+    color: black;
+  }
