--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,20 @@ body {
     margin: 0;
 }
 
+main {
+    position: relative;
+    min-height: 62vh;
+}
+
+footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;  
+}
+
 /* nav bar and footer */
+
 .siteNav {
     display: inline-block;
     background-color: black;
@@ -107,12 +120,14 @@ body {
 /* index css */
 .content {
     margin-bottom: 80px;
-    margin-left:80px ;
+    margin-left: 80px;
+    margin-right: 80px;
 }
 
 .pageHeader {
     margin-top: 80px;
     margin-left: 80px;
+    margin-right: 80px;
     font-size: 15px;
 }
 
