--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ body {
 
 main {
     position: relative;
-    min-height: 62vh;
+    min-height: 65vh;
 }
 
 footer {
@@ -119,26 +119,23 @@ footer {
 
 /* index css */
 .content {
-    margin-bottom: 80px;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin: 80px;
 }
-
-.pageHeader {
-    margin-top: 80px;
-    margin-left: 80px;
-    margin-right: 80px;
-    font-size: 15px;
-}
-
 
 /* events css */
 .eventCategory {
     display: flex;
     justify-content: center;
+    margin-top: 80px;
 }
 .events {
     position: relative;
+}
+
+.eventContent {
+    margin-bottom: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
 }
 
 .eventCards {
@@ -165,7 +162,7 @@ footer {
   }
   
   .cardContainer img {
-    height: 9rem;
+    height: 8rem;
     width: 12rem;
     display: flex;
   }
