--- a/static/style.css
+++ b/static/style.css
@@ -170,6 +170,10 @@ footer {
     gap: 0.5rem;
     margin-bottom: 20px;
   }
+
+  .cardContainer:hover {
+    box-shadow: 0px 10px 14px #5271FF, 5px 5px 14px #5271FF;
+  }
   
 .cardContainer img {
 height: 8rem;
