--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,7 +131,15 @@ footer {
     margin: 80px;
     width: 50%;
 }
+.contentImage {
+    margin: 80px;
+}
 
+.homeCover {
+    width: 100%;
+    height: 400px;
+ 
+}
 /* events css */
 .eventCategory {
     display: flex;
@@ -223,7 +231,7 @@ color: black;
     margin-bottom: 80px;
 }
 
-.eventButtons a {
+.eventButtons button {
     padding: 15px 30px;
     text-decoration: none;
     border-radius: 10px;
@@ -271,7 +279,7 @@ color: black;
     justify-content: center;
 }
 
-.formContainer a {
+.formContainer button {
     padding: 15px 30px;
     text-decoration: none;
     border-radius: 10px;
