added a new route, additional pages, fixed dates

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,10 @@
 
 <main>
     <section class="content">
-        <h1>WELCOME TO ALL SPORTS</h1>
+        <h1>ABOUT ALL SPORTS</h1>
+        <p>Hi! My name is Zaina Shawar and I created ALL SPORTS! Ever since I finished high school I 
+            have not been able to play sports like I used to. I wanted to create a way for sports lovers
+            to find pickup games with people that also want to continue participating sports for fun. </p>
         <p>Find or create pickup games for your favorite sports. Join others in playing the game you 
             love. We support any sport category that cannot be played alone! </p>
         <p>Whether you are currently an athlete on a team or you do not have one and still want to play,
@@ -10,7 +13,7 @@
         <p>Checkout our Events page to browse available pick up games.</p>
     </section>
     <section class="contentImage">   
-        <img src="/images/SportsCover.png" alt="Sports Cover" class="mainImages">
+        <img src="/images/about.png" alt="About Creator Photo" class="mainImages">
     </section>
     
 </main>
