--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,18 +128,19 @@ footer {
 
 /* index css */
 .content {
-    margin: 80px;
+    margin: 80px 80px 40px 80px;
     width: 50%;
 }
 .contentImage {
-    margin: 80px;
+    margin: 0px 80px 80px 80px;
 }
 
-.homeCover {
-    width: 100%;
-    height: 400px;
+.mainImages {
+    width: 50%;
+    height: auto;
  
 }
+
 /* events css */
 .eventCategory {
     display: flex;
@@ -169,7 +170,7 @@ footer {
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 5px 5px 14px #5271FF;
-    width: 12rem;
+    width: 13rem;
     height: 15rem;
     background-color: white;
     display: flex;
@@ -222,6 +223,11 @@ color: black;
     margin-bottom: 80px;
 }
 
+.eventImages{
+    width: 100%;
+    height: auto;
+}
+
 .eventButtons {
     float: right;
     margin-top: 10px;
@@ -258,6 +264,7 @@ color: black;
 }
 
 
+/* form css */
 
 .formContainer {
     padding: 1rem;
