--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,8 +3,8 @@
         <nav class="footerNav">
             <ul class="navlinks3">
                 <li class="creatorName">Zaina Shawar | Copyright 2022</li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
                 
                 
             </ul>
