Users can add. update, and delete events

--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -7,26 +7,26 @@
         
         <form method="POST" action="/events/<%=event.id%>?_method=PUT" class="formContent">
             <label for="sport">Sport</label>
-            <input type="text" placeholder="Sport" name="sport" id="sport" value = "<%=event.sport%>">
+            <input type="text" placeholder="Sport" name="sport" id="sport" value = "<%=event.sport%>" required>
 
             <label for="title">Title</label>
-            <input type="text" placeholder="Title" name="title" id="title" value = "<%=event.title%>">
+            <input type="text" placeholder="Title" name="title" id="title" value = "<%=event.title%>" required>
 
 
             <label for="details">Details</label>
             <textarea name="details" id="details" rows="5"><%=event.details%></textarea>
 
             <label for="location">Where</label>
-            <input type="text" placeholder="Location" name="location" id="location" value = "<%=event.location%>">
+            <input type="text" placeholder="Location" name="location" id="location" value = "<%=event.location%>" required>
 
             <label for="date">When</label>
-            <input type="date" name="date" id="date" value = "<%=event.date%>">
+            <input type="date" name="date" id="date" value = "<%=event.date%>" required>
 
             <label for="start">Start</label>
-            <input type="time"  name="start" id="start" value = "<%=event.start%>">
+            <input type="time"  name="start" id="start" value = "<%=event.start%>" required>
 
             <label for="end">End</label>
-            <input type="time"  name="end" id="end" value = "<%=event.end%>">
+            <input type="time"  name="end" id="end" value = "<%=event.end%>" required>
 
             <label for="image">Where</label>
             <input type="text" placeholder="imgURL" name="image" id="image" value = "<%=event.image%>">
