--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,18 +171,18 @@ footer {
     border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 5px 5px 14px #5271FF;
     width: 13rem;
-    height: 15rem;
+    height: 16rem;
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
     margin-bottom: 20px;
-  }
+}
 
-  .cardContainer:hover {
-    box-shadow: 0px 10px 14px #5271FF, 5px 5px 14px #5271FF;
-  }
+.cardContainer:hover {
+box-shadow: 0px 10px 14px #5271FF, 5px 5px 14px #5271FF;
+}
   
 .cardContainer img {
 height: 8rem;
@@ -190,9 +190,14 @@ width: 12rem;
 display: flex;
 }
 
-.cardContainer h3 {
+.cardContainer h3, .cardContainer p {
 margin: 0;
 }
+
+.cardContainer p span {
+    font-weight: 550;
+    }
+
 
 .eventLink {
 text-decoration: none;
