--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -7,28 +7,28 @@
         
         <form action = '/events' method = 'POST' class="formContent">
             <label for="sport">Sport</label>
-            <input type="text" placeholder="Sport" name="sport" id="sport">
+            <input type="text" placeholder="Sport" name="sport" id="sport" required>
 
             <label for="title">Title</label>
-            <input type="text" placeholder="Title" name="title" id="title">
+            <input type="text" placeholder="Title" name="title" id="title" required>
 
             <label for="host">Host</label>
-            <input type="text" placeholder="Host" name="host" id="host">
+            <input type="text" placeholder="Host" name="host" id="host" required>
 
             <label for="details">Details</label>
             <textarea name="details" id="details" rows="5" placeholder="Description"></textarea>
 
             <label for="location">Where</label>
-            <input type="text" placeholder="Location" name="location" id="location">
+            <input type="text" placeholder="Location" name="location" id="location" required>
 
             <label for="date">When</label>
-            <input type="date" name="date" id="date">
+            <input type="date" name="date" id="date" required>
 
             <label for="start">Start</label>
-            <input type="time"  name="start" id="start">
+            <input type="time"  name="start" id="start" required>
 
             <label for="end">End</label>
-            <input type="time"  name="end" id="end">
+            <input type="time"  name="end" id="end" required>
 
             <label for="image">Where</label>
             <input type="text" placeholder="imgURL" name="image" id="image">
