--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/logoSymbol.png">
     <title>All Sports</title>
 </head>
 <body>
     <nav class="siteNav">
-        <a href="index.html"><img src="/images/logo.png" alt="All Sports Logo" class="logo"></a>
+        <a href="/"><img src="/images/logo.png" alt="All Sports Logo" class="logo"></a>
         <ul class="navlinks">
             <li><a href="/events/new">New Events</a></li>
             <li><a href="">Login</a></li>
