Edits to functionality

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,9 +12,9 @@
             ALL SPORTS is here to help you find a pickup game to join.</p>
         <p>Checkout our Events page to browse available pick up games.</p>
     </section>
-    <section class="contentImage">   
+    <div class="contentImage">   
         <img src="/images/about.png" alt="About Creator Photo" class="mainImages">
-    </section>
+    </div>
     
 </main>
 
