--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,9 +10,9 @@
         <p>Email - allsportsallday@gmail.com</p>
         <p>Phone - 704-340-4221</p>
     </section>
-    <section class="contentImage">   
+    <div class="contentImage">   
         <img src="/images/contact.png" alt="Contact Icons" class="mainImages">
-    </section>
+    </div>
     
 </main>
 
