--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,8 +1,11 @@
 <%- include('./partials/header.ejs') %>
 
-    <div class = "content">
+<main>
+    <section class = "content">
         <h3><%= error.status %> Error</h3> 
         <p><%= error.message %></p>
-    </div>
+    </section>
+</main>
+    
 
 <%- include('./partials/footer.ejs') %>
