--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
             ALL SPORTS is here to help you find a pickup game to join.</p>
         <p>Checkout our Events page to browse available pick up games.</p>
     </section>
-    <section class="contentImage">   
+    <div class="contentImage">   
         <img src="/images/SportsCover.png" alt="Sports Cover" class="mainImages">
-    </section>
+    </div>
     
 </main>
 
