--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,8 +9,8 @@
                 
             </ul>
             <div class="mediaRight">
-                <img src="/images/twitter.png" alt="" class="socialMedia">
-                <img src="/images/facebook.png" alt="" class="socialMedia">
+                <a href="/"><img src="/images/twitter.png" alt="" class="socialMedia"></a>
+                <a href="/"><img src="/images/facebook.png" alt="" class="socialMedia"></a>
             </div>
             
             
