--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,8 +13,8 @@
         <a href="/"><img src="/images/logo.png" alt="All Sports Logo" class="logo"></a>
         <ul class="navlinks">
             <li><a href="/events/new">New Events</a></li>
-            <li><a href="">Login</a></li>
-            <li><a href="">Signup</a></li>
+            <li><a href="/">Login</a></li>
+            <li><a href="/">Signup</a></li>
         </ul>
     </nav>
     <nav class="generalNav">
