no events message

--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -19,9 +19,9 @@
                     </a>
                     <% } }); %>
                 </section>
-        <% }); }%>
-
-         
+        <% }); } else {%>
+            <h1 class="eventCategory">There are no sport events to display.</h1>
+            <% } %>
     </section>
 </main>
 
