Allow user to edit host and require form fields

--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -16,7 +16,7 @@
             <input type="text" placeholder="Host" name="host" id="host" required>
 
             <label for="details">Details</label>
-            <textarea name="details" id="details" rows="5" placeholder="Description"></textarea>
+            <textarea name="details" id="details" rows="5" placeholder="Description" required></textarea>
 
             <label for="location">Where</label>
             <input type="text" placeholder="Location" name="location" id="location" required>
@@ -30,8 +30,8 @@
             <label for="end">End</label>
             <input type="time"  name="end" id="end" required>
 
-            <label for="image">Where</label>
-            <input type="text" placeholder="imgURL" name="image" id="image">
+            <label for="image">Image</label>
+            <input type="text" placeholder="imgURL" name="image" id="image" required>
 
             <aside>
                 <button class="createButton">Create</button>
