--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -12,9 +12,11 @@
             <label for="title">Title</label>
             <input type="text" placeholder="Title" name="title" id="title" value = "<%=event.title%>" required>
 
+            <label for="host">Host</label>
+            <input type="text" placeholder="Host" name="host" id="host" value = "<%=event.host%>" required>
 
             <label for="details">Details</label>
-            <textarea name="details" id="details" rows="5"><%=event.details%></textarea>
+            <textarea name="details" id="details" rows="5" required><%=event.details%></textarea>
 
             <label for="location">Where</label>
             <input type="text" placeholder="Location" name="location" id="location" value = "<%=event.location%>" required>
@@ -28,8 +30,8 @@
             <label for="end">End</label>
             <input type="time"  name="end" id="end" value = "<%=event.end%>" required>
 
-            <label for="image">Where</label>
-            <input type="text" placeholder="imgURL" name="image" id="image" value = "<%=event.image%>">
+            <label for="image">Image</label>
+            <input type="text" placeholder="imgURL" name="image" id="image" value = "<%=event.image%>" required>
 
             <aside>
                 <button class="createButton">Update</button>
