--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -16,8 +16,8 @@
         </section>
     </div>
     <form class="eventButtons">
-        <button type="submit" class="updateButton" formmethod="GET" formaction="/events/<%=event.id%>/edit">Update</button>
-        <button type="submit" class="deleteButton" formmethod="POST" formaction="/events/<%=event.id%>?_method=DELETE">Delete</button>
+        <button type="submit" class="updateButton" formmethod="GET" formaction="/events/<%=event._id%>/edit">Update</button>
+        <button type="submit" class="deleteButton" formmethod="POST" formaction="/events/<%=event._id%>?_method=DELETE">Delete</button>
     </form>
 </main>
 
