--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -16,7 +16,7 @@
             <input type="text" placeholder="Host" name="host" id="host" required>
 
             <label for="details">Details</label>
-            <textarea name="details" id="details" rows="5" placeholder="Description" required></textarea>
+            <textarea name="details" id="details" rows="5" placeholder="Description" required minlength="10"></textarea>
 
             <label for="location">Where</label>
             <input type="text" placeholder="Location" name="location" id="location" required>
