Added flash messages and styling

--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -13,7 +13,7 @@
             <input type="text" placeholder="Last Name" name="lastName" id="lastName" required>
 
             <label for="email">Email Address</label>
-            <input type="text" placeholder="Email" name="email" id="email" required>
+            <input type="email" placeholder="Email" name="email" id="email" required>
 
             <label for="password">Password</label>
             <input type="password" placeholder="Password" name="password" id="password" minlength="8" maxlength="64" required>
