--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -8,7 +8,7 @@
         <form action = '/users/login' method = 'POST' class="formContent">
 
             <label for="email">Email Address</label>
-            <input type="text" placeholder="Email" name="email" id="email" required>
+            <input type="email" placeholder="Email" name="email" id="email" required>
 
             <label for="password">Password</label>
             <input type="password" placeholder="Password" name="password" id="password" minlength="8" maxlength="64" required>
