--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,17 +175,12 @@ li {
     margin-top: 80px;
 }
 
-.profileName {
-    display: flex;
-    justify-content: center;
-  
-}
-
 .events {
     position: relative;
 }
 
 .eventContent {
+    
     margin-bottom: 50px;
     margin-left: 80px;
     margin-right: 80px;
@@ -284,7 +279,6 @@ color: black;
 
 .eventButtons {
     float: right;
-    margin-top: 10px;
 }
 
 .eventButtons {
@@ -308,20 +302,24 @@ color: black;
 .deleteButton {
     color: white;
     background-color: #FF3F3F;
+    margin-top: 10px;
 }
 
 .deleteButton:hover {
     background-color: #b82e2e;
+    cursor: pointer;
 }
 
 .updateButton {
     color: white;
     background-color: #5271FF;
     margin-right: 10px;
+    margin-top: 10px;
 }
 
 .updateButton:hover {
     background-color: #3454e2;
+    cursor: pointer;
 }
 
 .yesButton {
@@ -331,6 +329,7 @@ color: black;
 
 .yesButton:hover {
     background-color: #2b8112;
+    cursor: pointer;
 }
 
 .noButton {
@@ -340,6 +339,7 @@ color: black;
 
 .noButton:hover {
     background-color: #b82e2e;
+    cursor: pointer;
 }
 
 .maybeButton {
@@ -350,6 +350,7 @@ color: black;
 
 .maybeButton:hover {
     background-color: #3454e2;
+    cursor: pointer;
 }
 
 
@@ -437,11 +438,95 @@ label {
     background: rgba(108, 192, 112, 0.44); 
     text-align: center;
     padding: 10px 10px;
+    margin-bottom: 10px;
 }
   
 .error {
 background: rgba(255, 241, 51, 0.44);
 text-align: center;
 padding: 10px 10px;
+margin-bottom: 10px;
 }
 
+/* Profile Update and Delete Buttons */
+.deleteButtonProfile {
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 10px 20px;
+    background-color: black;
+}
+
+.deleteButtonProfile:hover {
+    background-color: #b82e2e;
+    cursor: pointer;
+}
+
+.updateButtonProfile {
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 10px 20px;
+    background-color: black;
+    margin-right: 10px;
+}
+
+.updateButtonProfile:hover {
+    background-color: #3454e2;
+    cursor: pointer;
+}
+
+/* Profile RSVP Table */
+table {
+    border-collapse: collapse;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25), 5px 5px 14px #5271FF;
+    border-radius: 10px;
+    width: 70%;
+}
+  
+td, th {
+text-align: left;
+padding: 8px;
+
+}
+
+tbody tr:last-child td:first-child { 
+
+border-bottom-left-radius: 10px; 
+}
+
+tbody tr:last-child td:last-child { 
+
+border-bottom-right-radius: 10px; 
+
+}
+
+tr:nth-child(even) {
+background-color: #5272ffa6;
+}
+
+.rsvpLink:hover {
+    text-decoration: underline;
+}
+
+.profileContent {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
+}
+
+.profileName {
+    display: flex;
+    justify-content: center;
+}
+/* RSVP count */
+.rsvpInfo {
+    float: right; 
+}
+
+.rsvpInfo p {
+    margin: 0;
+    font-size: 18px;
+}
